--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,18 +5,24 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#06b6d4",
+  "description": "College timetable app that shows who’s free and what rooms they’re in.",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192.png?v=3",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-512.png?v=3",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/apple-touch-icon.png?v=3",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 }
